# PhotoShare

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
src/: schemas.py  schemas_of_transformation.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  photo_transformer.py  photos.py  tags.py  users.py
src/routes/: auth.py  comments.py  photo_transformer.py  photos.py  tags.py  users.py
src/services/: auth.py  roles.py
