[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["Serhii <komkoraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.13"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
